Swagger endpoint /users (PUT)
