# docs/swagger.json
@@ -39,6 +39,59 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "users"
+                ],
+                "description": "Update data from existent user",
+                "operationId": "App\\Http\\Controllers\\UserController::save",
+                "parameters": [
+                    {
+                        "name": "nome",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "cpf",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "datanascimento",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User Model",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/users": {
@@ -84,7 +137,6 @@
                     "users"
                 ],
                 "description": "Create new user",
-                "operationId": "App\\Http\\Controllers\\UserController::save",
                 "parameters": [
                     {
                         "name": "nome",
